--- a/static/load.html
+++ b/static/load.html
@@ -79,9 +79,8 @@
     <div class="msg">
         <div class="lds-dual-ring"></div>
         <p class="info">
-            Please wait a moment.
-            Our service maybe under high load causing some slowness on our servers. Your request will eventually be
-            responded to.
+            Please Do NOTwait a moment.
+            Our service maybe NEVER BE WORKING AND I AM LYING TO YOU I ALSO KNOW WHERE YOU ARE
         </p>
     </div>
     <script>
